--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style2.css" />
-    <title>Guess My Number by me</title>
-    <!-- <script defer src="script.js"></script> -->
-    <script defer src="script2.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Guess My Number</title>
+    <script defer src="app.js"></script>
   </head>
   <body>
     <header>
